[project]
name = "scrapers"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Mohrbacher",email = "johnnymo87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "nodriver (>=0.39,<0.40)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
flake8-type-checking = "^3.0.0"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
types-requests = "^2.32.0.20241016"
